--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -306,7 +306,7 @@ footer {
 
 /*             フォーム             */
 
-.form_title {
+.user_add_title, .user_login_title, .spot_add_list_title, .user_edit_title, .user_list_title {
     margin-top: 80px;
     margin-bottom: 50px;
     text-align: center;
@@ -418,20 +418,21 @@ td {
 }
 
 .result {
+    text-align: center;
     margin-bottom: 100px;
 }
 
-/*             ２カラム画面             */
+/*             ユーザー・アドミン画面             */
 
 #side_menu {
-    width: 25%;
+    width: 15%;
     height: 75%;
     float: left;
 }
 
-.menulist {
+.menu_list {
     display: block;
-    margin: 50px 0 50px 100px;
+    margin: 50px 0 50px 60px;
 }
 
 #main {
@@ -463,4 +464,39 @@ td {
 .spot_add {
     margin-top: 50px;
     margin-left: 600px;
+}
+
+/*             admin 全ユーザー一覧             */
+.user_list_reslut {
+    padding-left: 120px;
+    margin-bottom: 30px;
+}
+
+.user_list_table {
+    border: solid 1px #2F4F4F;
+    border-collapse: collapse;
+}
+
+.user_list_id {
+    width: 10%;
+    border: solid 1px #2F4F4F;
+    border-collapse: collapse;
+}
+
+.user_list_name {
+    width: 15%;
+    border: solid 1px #2F4F4F;
+    border-collapse: collapse;
+}
+
+.user_list_mail {
+    width: 40%;
+    border: solid 1px #2F4F4F;
+    border-collapse: collapse;
+}
+
+.user_list_edit {
+    width: 20%;
+    border: solid 1px #2F4F4F;
+    border-collapse: collapse;
 }
