--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -45,7 +45,7 @@ header {
 
 .main_content {
     background-size: cover;
-    background-image: url(../img/4211591_m.jpg);
+    background-image: url(../img/index_img.jpg);
     background-position: center center;
     min-height: 100vh;
 }
