--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -27,7 +27,7 @@ header {
 .logo-title { 
     font-family: 'Girassol', cursive;
     font-size: 40pt;
-    padding: 18px 50px;
+    padding: 0 50px;
 }
 
 .main-menu {
@@ -38,7 +38,7 @@ header {
 }
 
 .menu-button {
-    padding-left: 130px;
+    padding-left: 30px;
 }
 
 /*             メイン部分のCSS（トップページ）             */
@@ -66,9 +66,9 @@ h1 {
 }
 
 .container {
-    width: 30%;
+    width: 500px;
     float: right;
-    margin-right: 150px;
+    margin-right: 70px;
     margin-top: 20px;
 }
 
@@ -91,7 +91,7 @@ article p {
 }
 
 .area-search {
-    width: 60%;
+    width: 500px;
     margin: 70px 0 50px 150px;
     padding-top: 60px;
     position: relative;
@@ -246,55 +246,46 @@ article p {
 
 .hokkaidou {
     margin: 10px 0;
-    padding-left: 10px;
     font-size: 12pt;
 }
 
 .touhoku {
     margin: 10px 0;
-    padding-left: 30px;
     font-size: 12pt;
 }
 
 .tyuubu {
     margin: 10px 0;
-    padding-left: 30px;
     font-size: 12pt;
 }
 
 .kantou {
     margin: 10px 0;
-    padding-left: 60px;
     font-size: 12pt;
 }
 
 .kansai {
     margin: 10px 0;
-    padding-left: 30px;
     font-size: 12pt;
 }
 
 .tyuugoku {
     margin: 10px 0;
-    padding-left: 30px;
     font-size: 12pt;
 }
 
 .shikoku {
     margin: 10px 0;
-    padding-left: 30px;
     font-size: 12pt;
 }
 
 .kyuusyuu {
     margin: 10px 0;
-    padding-left: 30px;
     font-size: 12pt;
 }
 
 .okinawa {
     margin: 10px 0;
-    padding-left: 18px;
     font-size: 12pt;
 }
 
@@ -324,7 +315,7 @@ footer {
 }
 
 .add-form, .user-login, .user-edit-form {
-    width: 19%;
+    width: 270px;
     margin: 0 auto;
     text-align: right;
 }
@@ -359,24 +350,19 @@ label {
 
 /*             テーブル             */
 
-table {
+.search-area {
     width: 600px;
     margin: 0 400px;
 }
 
 th {
-    width: 30%;
+    width: 150px;
     border-right: 1px black solid;
-}
-
-td {
-    width: 60%;
-    padding-left: 20px;
 }
 
 .details {
     display: inline-block;
-    width: 40%;
+    width: 200px;
 }
 
 /*             検索ページ             */
@@ -436,26 +422,31 @@ td {
 /*             ユーザー・アドミン画面             */
 
 #side-menu {
-    width: 15%;
-    height: 75%;
+    width: 200px;
+    height: 610px;
     float: left;
     background-color: rgba(228, 255, 243, 0.7);
 }
 
 .menu-list {
     display: block;
-    margin: 50px 0 50px 60px;
+    margin: 50px 0 50px 50px;
 }
 
 #main {
-    height: 75%;
+    height: 610px;
+}
+
+#user-info {
+    height: 610px;
+    overflow-y: scroll;
 }
 
 /*             ユーザーページ             */
 
 .user-name, .user-mail {
     display: block;
-    margin:  0 0 80px 500px;
+    margin:  0 0 80px 400px;
 }
 
 .user-name {
@@ -480,7 +471,7 @@ td {
 
 /*             admin 全ユーザー一覧             */
 .search-box {
-    padding-left: 630px;
+    padding-left: 400px;
 }
 
 .admin-search-result {
@@ -488,7 +479,6 @@ td {
 }
 
 .user-list-reslut {
-    padding-left: 120px;
     margin-bottom: 30px;
 }
 
@@ -542,11 +532,6 @@ h4 {
 }
 
 /*              スポット作成・更新フォーム              */
-h3 {
-    padding-top: 20px;
-    text-align: center;
-    font-size: 15pt;
-}
 
 .spot-create-form {
     padding-left: 500px;
@@ -566,7 +551,7 @@ h3 {
 }
 
 .spot-create-button {
-    margin-left: 150px;
+    margin-left: 800px;
 }
 
 .spot-edit-button {
@@ -575,4 +560,27 @@ h3 {
 
 .spot-delete-button {
     margin-left: 150px;
+}
+
+/*              品目登録                */
+
+.recycling_item_table {
+    margin: 30px 0 80px 25%;
+}
+
+.recycling_item_table, .recycling_item_table th, .recycling_item_table td {
+    border: solid 1px #2F4F4F;
+    border-collapse: collapse;
+}
+
+.recycling_item_table th:first-child, .recycling_item_table td:first-child {
+    width: 100px;
+}
+
+.recycling_item_table th:nth-child(2), .recycling_item_table td:nth-child(2) {
+    width: 300px;
+}
+
+.item-create-form {
+    margin: 0 0 50px 40%;
 }
