API追加とトップページのデザイン変更

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -18,22 +18,20 @@ a:link, a:visited, a:hover, a:active {
 /*             ヘッダー部分のCSS             */
 
 header {
-    height: 100px;
+    height: 70px;
     display: flex;
     justify-content: space-between;
     border-bottom: solid 1px #d5f0c5;
 }
 
 .logo-title { 
-    font-family: 'Girassol', cursive;
-    font-size: 40pt;
-    padding: 0 50px;
+    padding: 0 5%;
 }
 
 .main-menu {
     display: flex;
     justify-content: space-between;
-    margin-top: 32px;
+    margin-top: 25px;
     margin-right: 130px;
 }
 
@@ -42,9 +40,6 @@ header {
 }
 
 /*             メイン部分のCSS（トップページ）             */
-.primary {
-    height: 100vh;
-}
 
 .main-content {
     background-size: cover;
@@ -65,16 +60,34 @@ h1 {
     color: #2F4F4F;
 }
 
+.page-link {
+    width: 200px;
+    margin-top: 200px;
+    margin-left: 41%;
+    text-align: center;
+    font-size: 20pt;
+    background-color: #e668ad71;
+}
+
 .container {
-    width: 500px;
-    float: right;
-    margin-right: 70px;
-    margin-top: 20px;
+    background-color: #f9de9536;
+}
+
+.first-article-area {
+    display: flex;
+    margin-left: 10%;
+    margin-bottom: 100px;
+}
+
+.second-article-area {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-left: 10%;
 }
 
 article h2 {
-    font-size: 13pt;
-    padding-left: 70px;
+    font-size: 17pt;
+    border-bottom: solid 5px #04dfeac8;
 }
 
 article p {
@@ -82,18 +95,33 @@ article p {
     box-sizing: border-box;
 }
 
-.main-article {
+.first-article {
+    width: calc((100%/12)*5);
     margin: 100px 0;
 }
 
-.main-article h2 {
-    padding-left: 100px;
+.first-article-image{
+    width: calc((100%/12)*5);
+    margin-left: 10%;
+    margin-top: 50px;
+    border-radius: 5%;
+}
+
+.second-article {
+    width: calc((100%/12)*5);
+    margin-right: 10%;
+    padding-top: 100px;
+}
+
+.second-article-image{
+    width: calc((100%/12)*5);
+    margin-right: 10%;
+    margin-bottom: 50px;
+    border-radius: 5%;
 }
 
 .area-search {
-    width: 500px;
-    margin: 70px 0 50px 150px;
-    padding-top: 60px;
+    padding: 60px 0 60px 33%;
     position: relative;
 }
 
@@ -104,11 +132,12 @@ article p {
 .area-search h2 {
     position: absolute;
     top: 10px;
-    left: -50px;
+    left: 10%;
+    border-bottom: solid 5px #04dfeac8;
     font-size: 23pt;
 }
 
-.area-search img {
+.search-image img{
     height: 500px;
     width: 500px;
 }
@@ -117,7 +146,7 @@ article p {
     width: 70px;
     position: absolute;
     top: 80px;
-    left: 510px;
+    left: 70%;
     padding-bottom: 10px;
     font-size: 10pt;
     color: #2f4f4f;
@@ -129,7 +158,7 @@ article p {
     width: 125px;
     position: absolute;
     top: 190px;
-    left: 455px;
+    left: 70%;
     padding-bottom: 10px;
     font-size: 10pt;
     color: #2f4f4f;
@@ -141,7 +170,7 @@ article p {
     width: 125px;
     position: absolute;
     top: 145px;
-    left: 140px;
+    left: 40%;
     padding-bottom: 10px;
     font-size: 10pt;
     color: #2f4f4f;
@@ -153,7 +182,7 @@ article p {
     width: 190px;
     position: absolute;
     top: 315px;
-    left: 390px;
+    left: 70%;
     padding-bottom: 10px;
     font-size: 10pt;
     color: #2f4f4f;
@@ -165,7 +194,7 @@ article p {
     width: 125px;
     position: absolute;
     top: 430px;
-    left: 220px;
+    left: 50%;
     padding-bottom: 10px;
     font-size: 10pt;
     color: #2f4f4f;
@@ -177,7 +206,7 @@ article p {
     width: 125px;
     position: absolute;
     top: 187px;
-    left: 0;
+    left: 30%;
     padding-bottom: 10px;
     font-size: 10pt;
     color: #2f4f4f;
@@ -189,7 +218,7 @@ article p {
     width: 125px;
     position: absolute;
     top: 472px;
-    left: 80px;
+    left: 40%;
     padding-bottom: 10px;
     font-size: 10pt;
     color: #2f4f4f;
@@ -201,7 +230,7 @@ article p {
     width: 125px;
     position: absolute;
     top: 430px;
-    left: -110px;
+    left: 25%;
     padding-bottom: 10px;
     font-size: 10pt;
     color: #2f4f4f;
@@ -213,7 +242,7 @@ article p {
     width: 70px;
     position: absolute;
     top: 495px;
-    left: 510px;
+    left: 70%;
     padding-bottom: 10px;
     font-size: 10pt;
     color: #2f4f4f;
@@ -348,14 +377,14 @@ label {
     
 }
 
-/*             テーブル             */
+/*             検索フォームのテーブル             */
 
 .search-area {
-    width: 600px;
-    margin: 0 400px;
+    width: 40%;
+    margin: 0 30%;
 }
 
-th {
+.search-area th {
     width: 150px;
     border-right: 1px black solid;
 }
@@ -373,7 +402,7 @@ th {
 
 
 .search-button {
-    margin: 0 670px;
+    margin: 0 48%;
     border: solid #B0E0E6 1px;
     background-color: #B0E0E6;
     border-radius: 0 0 5px 5px;
@@ -400,7 +429,7 @@ th {
 .result-number {
     display: flex;
     justify-content: flex-end;
-    margin-right: 400px;
+    margin-right: 25%;
 }
 
 .number {
@@ -423,22 +452,22 @@ th {
 
 #side-menu {
     width: 200px;
-    height: 610px;
+    height: 670px;
     float: left;
     background-color: rgba(228, 255, 243, 0.7);
 }
 
 .menu-list {
     display: block;
-    margin: 50px 0 50px 50px;
+    margin: 50px 0 0 50px;
 }
 
 #main {
-    height: 610px;
+    height: 670px;
 }
 
 #user-info {
-    height: 610px;
+    height: 670px;
     overflow-y: scroll;
 }
 
@@ -446,7 +475,7 @@ th {
 
 .user-name, .user-mail {
     display: block;
-    margin:  0 0 80px 400px;
+    margin:  0 0 80px 30%;
 }
 
 .user-name {
@@ -454,7 +483,7 @@ th {
 }
 
 .user-edit-button {
-    margin-left: 800px;
+    margin-left: 70%;
     padding: 10px;
 }
 
@@ -472,10 +501,6 @@ th {
 /*             admin 全ユーザー一覧             */
 .search-box {
     padding-left: 400px;
-}
-
-.admin-search-result {
-    margin-left: 500px;
 }
 
 .user-list-reslut {
@@ -583,4 +608,20 @@ h4 {
 
 .item-create-form {
     margin: 0 0 50px 40%;
+}
+
+/*              スポット用テーブル              */
+
+.spot-table {
+    width: 50%;
+    margin-left: 25%;
+}
+
+.spot-table th {
+    width: 20%;
+    border-right: solid 1px black;
+}
+
+.spot-table td {
+    width: 80%;
 }
